--- a/src/app/Component/form/form.component.css
+++ b/src/app/Component/form/form.component.css
@@ -6,23 +6,18 @@
   justify-content: center;
   padding: 10px;
 }
-input{
-  border:none;
-  border-bottom: 1px solid black;
-  padding: 4px;
-  width: 30vw;
-}
+
 .btn{
   padding: 4px 40px;
   border: none;
-  background: rgb(17, 17, 17);
-  color: yellow;
+  color: green;
   font-size: 15px;
   box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+  margin: 5px;
 
 }
 .btn:nth-child(1){
-  background: rgb(112, 5, 5);
+  color: red;
 }
 
 h1{
@@ -30,11 +25,12 @@ h1{
 }
 
 .container2{
-  max-width: 800px;
-  margin: auto;
+max-width: 700px;
+margin: auto;
   display: flex;
   align-items: center;
   justify-content: space-between;
   padding: 10px;
-  background-color: gray;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 }
+
