--- a/src/app/Component/form/form.component.html
+++ b/src/app/Component/form/form.component.html
@@ -2,16 +2,25 @@
 
 <div class="container">
 <form #myForm="ngForm" (ngSubmit)="onSubmit()" >
-  <input type="text" name="name" [(ngModel)]="dataname"   required>
-  <button type="submit" class="btn">Add </button>
+  <mat-form-field>
+    <input type="text" matInput placeholder="Enter your name" name="name" [(ngModel)]="dataname"   required>
+
+  </mat-form-field>
+  <button type="submit" class="btn"><mat-icon>add</mat-icon></button>
+
+
+
   </form>
 </div>
 <section>
   <div *ngFor="let data of  cruddata let i=index" class="container2">
     <div>{{data}} </div>
-    <div>
-       <button (click)="remove(data)" class="btn">Delete</button>
-      <button (click)="edit(i)" class="btn">Edit</button>
+    <div >
+       <button (click)="remove(data)" class="btn"><mat-icon>delete</mat-icon>
+       </button>
+      <button (click)="edit(i)" class="btn">
+        <mat-icon>edit</mat-icon>
+      </button>
     </div>
 
   </div>
